changed z-index to prevent overlaping outside container

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,6 @@
 .vimeo-video a {
     display: block;
     position: relative;
-    z-index: 2;
 }
 
 .vimeo-video .image_container figcaption {
@@ -28,7 +27,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: -1;
 }
 
 .vimeo-video .embed iframe {
@@ -37,7 +36,7 @@
 }
 
 .vimeo-video.active .embed {
-    z-index: 3;
+    z-index: auto;
 }
 
 #colorbox.vimeo-video-lightbox #cboxLoadedContent {
